apps/nodefront/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodefront
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: nodefront
    app.kubernetes.io/instance: nodefront
